fix for search
